# cooperate-Analysis-and-Machine-Learning

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  app_config.py  deploy.py  nixpacks.toml  pyproject.toml  requirements.txt  setup.sh  start.sh
.streamlit/: config.toml
