[tool.poetry]
name = "corporate-financial-dashboard"
version = "0.1.0"
description = "Corporate Financial Analysis & Machine Learning Dashboard"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.28.0"
pandas = "^2.0.3"
numpy = "^1.24.3"
plotly = "^5.15.0"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"